# termsync

./: .flake8  .gitignore  CHANGELOG.txt  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  server-models.drawio
database/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--1216469591658387385.wt  collection-0--6528499620923702444.wt  collection-2--1216469591658387385.wt  collection-2--6528499620923702444.wt  index-1--1216469591658387385.wt  index-1--6528499620923702444.wt  index-3--1216469591658387385.wt  index-3--6528499620923702444.wt  sizeStorer.wt
database/diagnostic.data/: metrics.2024-04-07T15-37-24Z-00000  metrics.2024-04-07T15-45-44Z-00000  metrics.2024-04-07T15-47-16Z-00000  metrics.2024-04-07T15-48-34Z-00000
documentation/: .$server-deployment.drawio.bkp  client-architecture.drawio  server-deployment.drawio  server-models.drawio
src/: database.py  main.py  script.py
src/client/: api.py  app.py  main.py
src/client/api/: __init__.py  api.py
src/client/data/: session.json  settings.yaml
src/client/functions/: __init__.py  help.py  manual.json  project_functions.py  prompt.py  startup.py  (+1 more)
src/models/: __init__.py  project.py  session_token.py  task.py  user.py
src/routers/: esp.py  helloworld.py  login.py  user.py
src/server/: Dockerfile  database.py  main.py
src/utils/: __init__.py  utils.py
tests/: test_api_calls.py  test_models.py
tests/server_tests/: test_api_calls.py  test_fastapi.py  test_models.py  test_projects_api.py  test_tasks_api.py  test_token_api.py  test_users_api.py
(+25 files in other folders)
