[tool.poetry]
name = "termsync"
version = "0.1.0"
description = "The repo for TermSync"
authors = ["reezuleanu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
pytest = "^8.0.0"
aiohttp = "^3.9.3"
pymongo = "^4.6.1"
requests = "^2.31.0"
flake8 = "^7.0.0"
httpx = "^0.27.0"
mongomock = "^4.1.2"
setuptools = "^69.1.1"
rich = "^13.7.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
